# braincomua-playwright-project

./: Readme.md  docker-compose.yml  pyproject.toml
braincomua_plw_project/: manage.py
braincomua_plw_project/braincomua_plw_project/: asgi.py  settings.py  urls.py  wsgi.py
braincomua_plw_project/parser_app/migrations/: 0001_initial.py
modules/: 1_playwright_parser.py  load_django.py
modules/config/: playwright_config.py
modules/utils/: collect_products_plw.py  get_main_url.py  search_product_plw.py  storage.py
results/: products.csv
